--- a/MealControl/Contexts/Contexts.csproj
+++ b/MealControl/Contexts/Contexts.csproj
@@ -61,13 +61,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MealEntities.cs" />
-    <Compile Include="Migrations\201709282001451_create_base.cs" />
-    <Compile Include="Migrations\201709282001451_create_base.Designer.cs">
-      <DependentUpon>201709282001451_create_base.cs</DependentUpon>
+    <Compile Include="Migrations\201710161643134_Creation base and adding first datas.cs" />
+    <Compile Include="Migrations\201710161643134_Creation base and adding first datas.Designer.cs">
+      <DependentUpon>201710161643134_Creation base and adding first datas.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201709282003096_create_first_user.cs" />
-    <Compile Include="Migrations\201709282003096_create_first_user.Designer.cs">
-      <DependentUpon>201709282003096_create_first_user.cs</DependentUpon>
+    <Compile Include="Migrations\201710161645258_First user as a developer.cs" />
+    <Compile Include="Migrations\201710161645258_First user as a developer.Designer.cs">
+      <DependentUpon>201710161645258_First user as a developer.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -83,11 +83,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201709282001451_create_base.resx">
-      <DependentUpon>201709282001451_create_base.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201710161643134_Creation base and adding first datas.resx">
+      <DependentUpon>201710161643134_Creation base and adding first datas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201709282003096_create_first_user.resx">
-      <DependentUpon>201709282003096_create_first_user.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201710161645258_First user as a developer.resx">
+      <DependentUpon>201710161645258_First user as a developer.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
